corrected mrabs --> mrcalc -abs

--- a/december_15.ipynb
+++ b/december_15.ipynb
@@ -269,11 +269,12 @@
     }
    ],
    "source": [
-    "# We compute the absolute value of the residual with \"mrabs\"\n",
+    "# We compute the absolute value of the residual with \"mrcalc -abs\"\n",
     "# This is useful because the removed noise can be + or -\n",
     "# but we mostly care about the \"amount\" of it that was removed\n",
-    "mrabs $SUBJECTDIR'preprocessing/dwi_denoise_residual.nii.gz' \\\n",
-    "      $SUBJECTDIR'preprocessing/dwi_denoise_ABSresidual.nii.gz'"
+    "mrcalc $SUBJECTDIR'preprocessing/dwi_denoise_residual.nii.gz' \\\n",
+    "       -abs \\\n",
+    "       $SUBJECTDIR'preprocessing/dwi_denoise_ABSresidual.nii.gz'"
    ]
   },
   {
@@ -423,9 +424,11 @@
     }
    ],
    "source": [
-    "# We also compute absolute residual (which are less usuful for degibbs)\n",
-    "mrabs $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_residual.nii.gz' \\\n",
-    "      $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_ABSresidual.nii.gz'"
+    "# We also compute absolute residual (which are less useful for degibbs)\n",
+    "mrcalc $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_residual.nii.gz' \\\n",
+    "       -abs \\\n",
+    "       $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_ABSresidual.nii.gz'\n",
+    "      "
    ]
   },
   {
