feb24 notes dones

--- a/february_24.ipynb
+++ b/february_24.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -137,6 +137,423 @@
    "source": [
     "# In pratice, we have the MNI template\n",
     "MNIFA='/afs/cbs.mpg.de/software/fsl/6.0.3/ubuntu-bionic-amd64/data/standard/FSL_HCP1065_FA_1mm.nii.gz'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Performing voxelwise math operation on image\n",
+    "\n",
+    "mrcalc is a tool part of the mrtrix tool to perform operation on images or between image.  \n",
+    "\n",
+    "We have already used it before for a few simple case:  \n",
+    "- To get the difference between 2 images, to check the \"impact\" of a preprocessing step such as denoising (substraction)  \n",
+    "`mrcalc image1 image2 -subtract image_output`  \n",
+    "- To the absolute value of an image (mrabs in deprecated in mrtrix3) (abs)  \n",
+    "`mrcalc image -abs image_output`  \n",
+    "- To \"apply\" a binary mask to an image (multiply)  \n",
+    "`mrcalc image mask -mul image_output`  \n",
+    "\n",
+    "mrcalc can be used to chain together multiple operation.  \n",
+    "It uses what is called a stack, it reads in inputs and put them one by one \"on-top\" of each other, then, when we use an operation flag such as '-mul', it takes image from the top of the stack until is gets enough for the operation, it compute the operation and put the result on top of the stack.  \n",
+    "For exemple, if you want to multiply 3 images together you could use the command  \n",
+    "`mrcalc A B C -mul -mul output`  \n",
+    "It reads from left to right the images, creating a stack like this: (bottom) A B C (top)  \n",
+    "then it reads the first '-mul', which is the multiply operation and requires 2 inputs, so it will pick the image on the top (C) and then the second image (B).  \n",
+    "It will multiply them, creating the image (C * B) and put it back on the stack: (bottom) A (C * B) (top).  \n",
+    "It will then read the second '-mul' and do the same, multiplying (C * B) with A.  \n",
+    "Then it will put it back in the stack, see that there isnt more operation and that there is only 1 thing in the stack and output it.  \n",
+    "If there is still more than 1 item in the stack at the end, it will give an error.  \n",
+    "If there is not enough object in the stack for a specific operation (like '-mul' with only 1 object) it will also give and error.  \n",
+    "\n",
+    "\n",
+    "You can also mix input and operation, for example, you can compute 9.3 * exp(-A/B) with  \n",
+    "`mrcalc A -neg B -div -exp 9.3 -mult output`  \n",
+    "or with  \n",
+    "`mrcalc 9.3 A B -div -neg -exp -mult output`  \n",
+    "\n",
+    "Let's work through what the stack looks like at each step of both commands:  \n",
+    "`mrcalc A -neg B -div -exp 9.3 -mult output`\n",
+    "1. read     A: (bottom) A (top)  \n",
+    "2. read  -neg: (bottom) -A (top)  \n",
+    "3. read     B: (bottom) -A B (top)  \n",
+    "4. read  -div: (bottom) (-A/B) (top)  \n",
+    "5. read  -exp: (bottom) (exp(-A/B)) (top)  \n",
+    "6. read   9.3: (bottom) (exp(-A/B)) 9.3 (top)  \n",
+    "7. read -mult: (bottom) (9.3 * exp(-A/B)) (top)  \n",
+    "8. No more inputs or operation and stack is only 1 element, output 9.3 * exp(-A/B)  \n",
+    "\n",
+    "\n",
+    "`mrcalc 9.3 A B -div -neg -exp -mult output`  \n",
+    "1. read   9.3: (bottom) 9.3 (top)  \n",
+    "2. read     A: (bottom) 9.3 A (top)  \n",
+    "3. read     B: (bottom) 9.3 A B(top)  \n",
+    "4. read  -div: (bottom) 9.3 (A/B) (top)  \n",
+    "5. read  -neg: (bottom) 9.3 (-A/B) (top)  \n",
+    "6. read  -exp: (bottom) 9.3 (exp(-A/B)) (top) \n",
+    "7. read -mult: (bottom) (exp(-A/B) * 9.3) (top) \n",
+    "8. No more inputs or operation and stack is only 1 element, output 9.3 * exp(-A/B) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`mrcalc A B -add C D -mult 4.2 -add -div output`  \n",
+    "perform the computation: $$\\frac{A + B}{C \\cdot D + 4.2}$$  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# we look at the information of the mrcalc command\n",
+      "# normally, you would simply do \"mrcalc -h\" \n",
+      "# but the text is too long for this jupyter notebook\n",
+      "# so I have to do a small hack with the 'cat' command\n",
+      "mrcalc -h | cat\n",
+      "MRtrix 3.0.0                         mrcalc                          Apr 23 2020\n",
+      "\n",
+      "     mrcalc: part of the MRtrix3 package\n",
+      "\n",
+      "SYNOPSIS\n",
+      "\n",
+      "     Apply generic voxel-wise mathematical operations to images\n",
+      "\n",
+      "USAGE\n",
+      "\n",
+      "     mrcalc [ options ] operand [ operand ... ]\n",
+      "\n",
+      "        operand      an input image, intensity value, or the special keywords\n",
+      "                     'rand' (random number between 0 and 1) or 'randn' (random\n",
+      "                     number from unit std.dev. normal distribution) or the\n",
+      "                     mathematical constants 'e' and 'pi'.\n",
+      "\n",
+      "\n",
+      "DESCRIPTION\n",
+      "\n",
+      "     This command will only compute per-voxel operations. Use 'mrmath' to\n",
+      "     compute summary statistics across images or along image axes.\n",
+      "\n",
+      "     This command uses a stack-based syntax, with operators (specified using\n",
+      "     options) operating on the top-most entries (i.e. images or values) in the\n",
+      "     stack. Operands (values or images) are pushed onto the stack in the order\n",
+      "     they appear (as arguments) on the command-line, and operators (specified\n",
+      "     as options) operate on and consume the top-most entries in the stack, and\n",
+      "     push their output as a new entry on the stack.\n",
+      "\n",
+      "     As an additional feature, this command will allow images with different\n",
+      "     dimensions to be processed, provided they satisfy the following\n",
+      "     conditions: for each axis, the dimensions match if they are the same size,\n",
+      "     or one of them has size one. In the latter case, the entire image will be\n",
+      "     replicated along that axis. This allows for example a 4D image of size [ X\n",
+      "     Y Z N ] to be added to a 3D image of size [ X Y Z ], as if it consisted of\n",
+      "     N copies of the 3D image along the 4th axis (the missing dimension is\n",
+      "     assumed to have size 1). Another example would a single-voxel 4D image of\n",
+      "     size [ 1 1 1 N ], multiplied by a 3D image of size [ X Y Z ], which would\n",
+      "     allow the creation of a 4D image where each volume consists of the 3D\n",
+      "     image scaled by the corresponding value for that volume in the\n",
+      "     single-voxel image.\n",
+      "\n",
+      "EXAMPLE USAGES\n",
+      "\n",
+      "     Double the value stored in every voxel:\n",
+      "       $ mrcalc a.mif 2 -mult r.mif\n",
+      "     This performs the operation: r = 2*a  for every voxel a,r in images a.mif\n",
+      "     and r.mif respectively.\n",
+      "\n",
+      "     A more complex example:\n",
+      "       $ mrcalc a.mif -neg b.mif -div -exp 9.3 -mult r.mif\n",
+      "     This performs the operation: r = 9.3*exp(-a/b)\n",
+      "\n",
+      "     Another complex example:\n",
+      "       $ mrcalc a.mif b.mif -add c.mif d.mif -mult 4.2 -add -div r.mif\n",
+      "     This performs: r = (a+b)/(c*d+4.2).\n",
+      "\n",
+      "     Rescale the densities in a SH l=0 image:\n",
+      "       $ mrcalc ODF_CSF.mif 4 pi -mult -sqrt -div ODF_CSF_scaled.mif\n",
+      "     This applies the spherical harmonic basis scaling factor: 1.0/sqrt(4*pi),\n",
+      "     such that a single-tissue voxel containing the same intensities as the\n",
+      "     response function of that tissue should contain the value 1.0.\n",
+      "\n",
+      "basic operations\n",
+      "\n",
+      "  -abs  (multiple uses permitted)\n",
+      "     |%1| : return absolute value (magnitude) of real or complex number\n",
+      "\n",
+      "  -neg  (multiple uses permitted)\n",
+      "     -%1 : negative value\n",
+      "\n",
+      "  -add  (multiple uses permitted)\n",
+      "     (%1 + %2) : add values\n",
+      "\n",
+      "  -subtract  (multiple uses permitted)\n",
+      "     (%1 - %2) : subtract nth operand from (n-1)th\n",
+      "\n",
+      "  -multiply  (multiple uses permitted)\n",
+      "     (%1 * %2) : multiply values\n",
+      "\n",
+      "  -divide  (multiple uses permitted)\n",
+      "     (%1 / %2) : divide (n-1)th operand by nth\n",
+      "\n",
+      "  -min  (multiple uses permitted)\n",
+      "     min (%1, %2) : smallest of last two operands\n",
+      "\n",
+      "  -max  (multiple uses permitted)\n",
+      "     max (%1, %2) : greatest of last two operands\n",
+      "\n",
+      "comparison operators\n",
+      "\n",
+      "  -lt  (multiple uses permitted)\n",
+      "     (%1 < %2) : less-than operator (true=1, false=0)\n",
+      "\n",
+      "  -gt  (multiple uses permitted)\n",
+      "     (%1 > %2) : greater-than operator (true=1, false=0)\n",
+      "\n",
+      "  -le  (multiple uses permitted)\n",
+      "     (%1 <= %2) : less-than-or-equal-to operator (true=1, false=0)\n",
+      "\n",
+      "  -ge  (multiple uses permitted)\n",
+      "     (%1 >= %2) : greater-than-or-equal-to operator (true=1, false=0)\n",
+      "\n",
+      "  -eq  (multiple uses permitted)\n",
+      "     (%1 == %2) : equal-to operator (true=1, false=0)\n",
+      "\n",
+      "  -neq  (multiple uses permitted)\n",
+      "     (%1 != %2) : not-equal-to operator (true=1, false=0)\n",
+      "\n",
+      "conditional operators\n",
+      "\n",
+      "  -if  (multiple uses permitted)\n",
+      "     (%1 ? %2 : %3) : if first operand is true (non-zero), return second\n",
+      "     operand, otherwise return third operand\n",
+      "\n",
+      "  -replace  (multiple uses permitted)\n",
+      "     (%1, %2 -> %3) : Wherever first operand is equal to the second operand,\n",
+      "     replace with third operand\n",
+      "\n",
+      "power functions\n",
+      "\n",
+      "  -sqrt  (multiple uses permitted)\n",
+      "     sqrt (%1) : square root\n",
+      "\n",
+      "  -pow  (multiple uses permitted)\n",
+      "     %1^%2 : raise (n-1)th operand to nth power\n",
+      "\n",
+      "nearest integer operations\n",
+      "\n",
+      "  -round  (multiple uses permitted)\n",
+      "     round (%1) : round to nearest integer\n",
+      "\n",
+      "  -ceil  (multiple uses permitted)\n",
+      "     ceil (%1) : round up to nearest integer\n",
+      "\n",
+      "  -floor  (multiple uses permitted)\n",
+      "     floor (%1) : round down to nearest integer\n",
+      "\n",
+      "logical operators\n",
+      "\n",
+      "  -not  (multiple uses permitted)\n",
+      "     !%1 : NOT operator: true (1) if operand is false (i.e. zero)\n",
+      "\n",
+      "  -and  (multiple uses permitted)\n",
+      "     (%1 && %2) : AND operator: true (1) if both operands are true (i.e.\n",
+      "     non-zero)\n",
+      "\n",
+      "  -or  (multiple uses permitted)\n",
+      "     (%1 || %2) : OR operator: true (1) if either operand is true (i.e.\n",
+      "     non-zero)\n",
+      "\n",
+      "  -xor  (multiple uses permitted)\n",
+      "     (%1 ^^ %2) : XOR operator: true (1) if only one of the operands is true\n",
+      "     (i.e. non-zero)\n",
+      "\n",
+      "classification functions\n",
+      "\n",
+      "  -isnan  (multiple uses permitted)\n",
+      "     isnan (%1) : true (1) if operand is not-a-number (NaN)\n",
+      "\n",
+      "  -isinf  (multiple uses permitted)\n",
+      "     isinf (%1) : true (1) if operand is infinite (Inf)\n",
+      "\n",
+      "  -finite  (multiple uses permitted)\n",
+      "     finite (%1) : true (1) if operand is finite (i.e. not NaN or Inf)\n",
+      "\n",
+      "complex numbers\n",
+      "\n",
+      "  -complex  (multiple uses permitted)\n",
+      "     (%1 + %2 i) : create complex number using the last two operands as\n",
+      "     real,imaginary components\n",
+      "\n",
+      "  -polar  (multiple uses permitted)\n",
+      "     (%1 /_ %2) : create complex number using the last two operands as\n",
+      "     magnitude,phase components (phase in radians)\n",
+      "\n",
+      "  -real  (multiple uses permitted)\n",
+      "     real (%1) : real part of complex number\n",
+      "\n",
+      "  -imag  (multiple uses permitted)\n",
+      "     imag (%1) : imaginary part of complex number\n",
+      "\n",
+      "  -phase  (multiple uses permitted)\n",
+      "     phase (%1) : phase of complex number (use -abs for magnitude)\n",
+      "\n",
+      "  -conj  (multiple uses permitted)\n",
+      "     conj (%1) : complex conjugate\n",
+      "\n",
+      "  -proj  (multiple uses permitted)\n",
+      "     proj (%1) : projection onto the Riemann sphere\n",
+      "\n",
+      "exponential functions\n",
+      "\n",
+      "  -exp  (multiple uses permitted)\n",
+      "     exp (%1) : exponential function\n",
+      "\n",
+      "  -log  (multiple uses permitted)\n",
+      "     log (%1) : natural logarithm\n",
+      "\n",
+      "  -log10  (multiple uses permitted)\n",
+      "     log10 (%1) : common logarithm\n",
+      "\n",
+      "trigonometric functions\n",
+      "\n",
+      "  -cos  (multiple uses permitted)\n",
+      "     cos (%1) : cosine\n",
+      "\n",
+      "  -sin  (multiple uses permitted)\n",
+      "     sin (%1) : sine\n",
+      "\n",
+      "  -tan  (multiple uses permitted)\n",
+      "     tan (%1) : tangent\n",
+      "\n",
+      "  -acos  (multiple uses permitted)\n",
+      "     acos (%1) : inverse cosine\n",
+      "\n",
+      "  -asin  (multiple uses permitted)\n",
+      "     asin (%1) : inverse sine\n",
+      "\n",
+      "  -atan  (multiple uses permitted)\n",
+      "     atan (%1) : inverse tangent\n",
+      "\n",
+      "hyperbolic functions\n",
+      "\n",
+      "  -cosh  (multiple uses permitted)\n",
+      "     cosh (%1) : hyperbolic cosine\n",
+      "\n",
+      "  -sinh  (multiple uses permitted)\n",
+      "     sinh (%1) : hyperbolic sine\n",
+      "\n",
+      "  -tanh  (multiple uses permitted)\n",
+      "     tanh (%1) : hyperbolic tangent\n",
+      "\n",
+      "  -acosh  (multiple uses permitted)\n",
+      "     acosh (%1) : inverse hyperbolic cosine\n",
+      "\n",
+      "  -asinh  (multiple uses permitted)\n",
+      "     asinh (%1) : inverse hyperbolic sine\n",
+      "\n",
+      "  -atanh  (multiple uses permitted)\n",
+      "     atanh (%1) : inverse hyperbolic tangent\n",
+      "\n",
+      "Data type options\n",
+      "\n",
+      "  -datatype spec\n",
+      "     specify output image data type. Valid choices are: float32, float32le,\n",
+      "     float32be, float64, float64le, float64be, int64, uint64, int64le,\n",
+      "     uint64le, int64be, uint64be, int32, uint32, int32le, uint32le, int32be,\n",
+      "     uint32be, int16, uint16, int16le, uint16le, int16be, uint16be, cfloat32,\n",
+      "     cfloat32le, cfloat32be, cfloat64, cfloat64le, cfloat64be, int8, uint8,\n",
+      "     bit.\n",
+      "\n",
+      "Standard options\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  -info\n",
+      "     display information messages.\n",
+      "\n",
+      "  -quiet\n",
+      "     do not display information messages or progress status; alternatively,\n",
+      "     this can be achieved by setting the MRTRIX_QUIET environment variable to a\n",
+      "     non-empty string.\n",
+      "\n",
+      "  -debug\n",
+      "     display debugging messages.\n",
+      "\n",
+      "  -force\n",
+      "     force overwrite of output files (caution: using the same file as input and\n",
+      "     output might cause unexpected behaviour).\n",
+      "\n",
+      "  -nthreads number\n",
+      "     use this number of threads in multi-threaded applications (set to 0 to\n",
+      "     disable multi-threading).\n",
+      "\n",
+      "  -config key value  (multiple uses permitted)\n",
+      "     temporarily set the value of an MRtrix config file entry.\n",
+      "\n",
+      "  -help\n",
+      "     display this information page and exit.\n",
+      "\n",
+      "  -version\n",
+      "     display version information and exit.\n",
+      "\n",
+      "AUTHOR\n",
+      "     J-Donald Tournier (jdtournier@gmail.com)\n",
+      "\n",
+      "COPYRIGHT\n",
+      "     Copyright (c) 2008-2019 the MRtrix3 contributors.\n",
+      "     This Source Code Form is subject to the terms of the Mozilla Public\n",
+      "     License, v. 2.0. If a copy of the MPL was not distributed with this\n",
+      "     file, You can obtain one at http://mozilla.org/MPL/2.0/.\n",
+      "     Covered Software is provided under this License on an \"as is\"\n",
+      "     basis, without warranty of any kind, either expressed, implied, or\n",
+      "     statutory, including, without limitation, warranties that the\n",
+      "     Covered Software is free of defects, merchantable, fit for a\n",
+      "     particular purpose or non-infringing.\n",
+      "     See the Mozilla Public License v. 2.0 for more details.\n",
+      "     For more details, see http://www.mrtrix.org/.\n",
+      "\n",
+      "REFERENCES\n",
+      "     Tournier, J.-D.; Smith, R. E.; Raffelt, D.; Tabbara, R.; Dhollander, T.;\n",
+      "     Pietsch, M.; Christiaens, D.; Jeurissen, B.; Yeh, C.-H. & Connelly, A.\n",
+      "     MRtrix3: A fast, flexible and open software framework for medical image\n",
+      "     processing and visualisation. NeuroImage, 2019, 202, 116137\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "source": [
+    "# we look at the information of the mrcalc command\n",
+    "# normally, you would simply do \"mrcalc -h\" \n",
+    "# but the text is too long for this jupyter notebook\n",
+    "# so I have to do a small hack with the 'cat' command\n",
+    "mrcalc -h | cat"
    ]
   },
   {
