added some notes to feb24

--- a/february_24.ipynb
+++ b/february_24.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -651,7 +651,9 @@
    "source": [
     "# You can visually inspect the response function with the following command:\n",
     "shview response_fa.txt\n",
-    "# It should look like a puffy disk"
+    "# It should look like a puffy disk\n",
+    "# If its not a disk, something went wrong, make sure response_voxel_fa.nii.gz is not complete nonsense\n",
+    "# THe thinner the disk, the sharper the response function"
    ]
   },
   {
@@ -683,11 +685,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "We want a tight mask for response function estimation, to avoid having nonsense included as potential candidate for single fiber voxels.  \n",
+    "But we want a generous mask for FOD computation. This is because we need to make sure that we compute FOD everywhere we might potentially visit during tractography. The mask is only used to speed up the computation, therefore the is no \"risk\" involve in using a larger one."
+   ]
   },
   {
    "cell_type": "code",
