--- a/april_7.ipynb
+++ b/april_7.ipynb
@@ -308,7 +308,10 @@
     "\n",
     "However, in connectomics, we often have a full parcellation of the cortex.  \n",
     "This can easily be 150 ROIs per hemisphere. \n",
-    "#### We need a systematic way to compute this matrix"
+    "#### We need a systematic way to compute this matrix\n",
+    "- Compute a labelmap image  \n",
+    "- Combine tck, labelmap to compute trackcount connectome matrix  \n",
+    "- Add metrics like length or FA  "
    ]
   },
   {
@@ -335,7 +338,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -573,6 +578,7 @@
     "# list of paths to individual ROI mask\n",
     "# ASSUMES non overlapping mask\n",
     "\n",
+    "# KEEP this, maybe saved to a file, to \"remember\" ordering/mapping\n",
     "LABELROI=(path/to/mask1.nii.gz \\\n",
     "          path/to/mask2.nii.gz \\\n",
     "          path/to/mask3.nii.gz)\n",
@@ -588,7 +594,7 @@
     "do\n",
     "    echo $ROI' index = '$ROIIDX;\n",
     "    # create a map of 0s and ROIIDX, add it to current labels\n",
-    "    mrcalc $ROI $ROIIDX 0 -if label.nii.gz -add labels.nii.gz -force;\n",
+    "    mrcalc $ROI $ROIIDX 0 -if labels.nii.gz -add labels.nii.gz -force;\n",
     "    # increment\n",
     "    ROIIDX=$((ROIIDX + 1))\n",
     "done\n"
@@ -602,18 +608,20 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Testing time"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
