--- a/april_7.ipynb
+++ b/april_7.ipynb
@@ -624,11 +624,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### CAREFUL\n",
+    "\n",
+    "Make sure you know/understand if your streamlines finish or not inside the relevant ROIs or if they can continue.  \n",
+    "Use the appropriate \"assignment\" option if they do.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t Assignement using endpoints, wrong if streamlines continue past\n",
+      "tck2connectome tracto/prob_bundles.tck \\\n",
+      "  connectome_example/labels.nii.gz \\\n",
+      "  connectome_example/connectome_tractcount_wrong.csv\n",
+      "tck2connectome: \u001b[01;31m[ERROR] output file \"connectome_example/connectome_tractcount_wrong.csv\" already exists (use -force option to force overwrite)\u001b[0m\n",
+      "\n",
+      "int,signement using \"backtracking search\" up to streamline midpoi\n",
+      "# usefull if the the streamlines only need to include the ROI\n",
+      "tck2connectome tracto/prob_bundles.tck \\\n",
+      "  connectome_example/labels.nii.gz \\\n",
+      "  connectome_example/connectome_tractcount_backtrack.csv \\\n",
+      "  -assignment_reverse_search 0 \\\n",
+      "  -force\n",
+      "tck2connectome: \u001b[00;31m[WARNING] existing output files will be overwritten\u001b[0m\n",
+      "tck2connectome: Image \"connectome_example/labels.nii.gz\" stored with floating-point type; need to check for non-integer or negative values\n",
+      "tck2connectome: [100%] uncompressing image \"connectome_example/labels.nii.gz\"\u001b[0K[0K\u001b[?7h\u001b[?7l\n",
+      "tck2connectome: [100%] Verifying parcellation image\u001b[0K[0K\u001b[?7h\u001b[?7l\n",
+      "tck2connectome: [100%] uncompressing image \"connectome_example/labels.nii.gz\"\u001b[0K[0K\u001b[?7h\u001b[?7l\n",
+      "tck2connectome: [100%] Constructing connectome\u001b[0K[0K\u001b[?7h\u001b[?7l\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
+   "source": [
+    "# Assignement using endpoints, wrong if streamlines continue past\n",
+    "tck2connectome tracto/prob_bundles.tck \\\n",
+    "  connectome_example/labels.nii.gz \\\n",
+    "  connectome_example/connectome_tractcount_wrong.csv\n",
+    "\n",
+    "# assignement using \"backtracking search\" up to streamline midpoint,\n",
+    "# usefull if the the streamlines only need to include the ROI\n",
+    "tck2connectome tracto/prob_bundles.tck \\\n",
+    "  connectome_example/labels.nii.gz \\\n",
+    "  connectome_example/connectome_tractcount_backtrack.csv \\\n",
+    "  -assignment_reverse_search 0 \\\n",
+    "  -force\n"
+   ]
   },
   {
    "cell_type": "code",
